--- a/commodore/scrapy.cfg
+++ b/commodore/scrapy.cfg
@@ -4,8 +4,8 @@
 # https://scrapyd.readthedocs.io/en/latest/deploy.html
 
 [settings]
-default = datacollect.settings
+default = commodore.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = datacollect
+project = commodore
